fix: Align search box to top

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ a {
 .header-actions {
   display: flex;
   gap: 10px;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
 }
 
@@ -352,6 +352,7 @@ body.mode-accessible .donut-value-label {
 }
 
 .search-box {
+  padding: 3px;
   position: relative;
 }
 .search-box input {
